# python-escape-room

./: .gitignore  LICENSE  PythonEscapeRoom.spec  README.md  app.py  build.py  homework.html  pyproject.toml  python_escape_room.html
rooms/: __init__.py  base.py  room_0a.py  room_0b.py  room_1.py  room_2.py  room_3.py  room_4.py  runner.py
