[project]
name = "python-escape-room"
version = "0.1.0"
description = "An interactive Python escape room game"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "twisted>=24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["rooms"]
